<resources>
    <string name="app_name">MyLittleHeroESGI</string>
    <string name="hello_world">Hello World !</string>
    <string name="activity_home_start_btn">START</string>
    <string name="activity_create_player_title">Create player</string>
    <string name="activity_create_player_pseudo_hint">Pseudo</string>
    <string name="activity_create_player_radio_button_male">male</string>
    <string name="activity_create_player_radio_button_female">female</string>
    <string name="activity_create_player_birthdate_hint">Birthdate</string>
    <string name="activity_create_player_next_button">NEXT</string>
    <string name="your_starting_weapon">Your starting weapon!</string>
    <string name="activity_choose_weapon_show_summary_text">NEXT</string>
    <string name="your_summary_text">Your summary</string>
    <string name="pseudo_edit_text_hint">Pseudo</string>
    <string name="sexe_edit_text_text">Sexe</string>
    <string name="birthdate_edit_text_hint">Birthdate</string>
    <string name="beginning_weapon_text_view_text">Beginning weapon!!</string>
    <string name="recap_activity_weapon_type_content">Weapon type</string>
</resources>
